# platform

./: .bazelrc  .clangd  .gitignore  LICENSE  MODULE.bazel  README.md  WORKSPACE
common/: BUILD  blocking_ref_counted.h  blocking_ref_counted_test.cc  buffer.h  buffer_test.cc  clock.cc  clock.h  clock_test.cc  default_scheduler.cc  default_scheduler.h  distribution.cc  distribution.h  distribution_test.cc  env.cc  env.h  env_test.cc  fingerprint.cc  fingerprint.h  fingerprint_test.cc  fixed.h  flag_override.h  flat_container_internal.h  flat_container_testing.h  flat_map.h  flat_map_test.cc  flat_set.h  flat_set_test.cc  json.cc  json.h  json_test.cc  lazy.h  lazy_test.cc  lock_free_container_internal.h  lock_free_hash_map.h  lock_free_hash_map_test.cc  lock_free_hash_set.h  lock_free_hash_set_test.cc  mock_clock.cc  mock_clock.h  mock_clock_test.cc  (+54 more)
http/: BUILD  channel.h  channel_listener.h  channel_listener_test.cc  channel_test.cc  default_server.cc  default_server.h  handlers.cc  handlers.h  hpack.cc  hpack.h  hpack_test.cc  http.cc  http.h  http_node.cc  http_node.h  huffman.cc  huffman.h  huffman_test.cc  mock_channel_manager.h  processor.cc  processor.h  server.cc  server.h  testing.h  write_queue.cc  write_queue.h  write_queue_test.cc
io/: BUILD  advisory_file_lock.cc  advisory_file_lock.h  advisory_file_lock_test.cc  buffer.h  buffer_test.cc  buffer_testing.h  cord.cc  cord.h  cord_test.cc  fd.h  fd_test.cc  sigusr.cc  sigusr.h  sigusr_test.cc
json/: BUILD  json.cc  json.h  json_test.cc  json_testing.h
net/: BUILD  alpn.cc  alpn.h  base_sockets.cc  fd.h  (+22 more)
(+156 files in other folders)
